module3 task work

--- a/less/blocks/features-place.less
+++ b/less/blocks/features-place.less
@@ -1,30 +1,79 @@
-.features-place__head {
-  margin: 0;
+.features-place {
+  &__head {
+    margin: 0;
 
-  font-size: 18px;
-  line-height: 26px;
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
+    color: #ffffff;
 
-  background-color: #81b3d2;
-}
-.features-place__about-features {
-  margin: 0;
+    background-color: #81b3d2;
+  }
+  &__title {
+    margin: 0;
 
-  font-size: 14px;
-  line-height: 21px;
-}
-.features-place__image {
-  width: 320px;
-  height: 260px;
-}
-.features-place__housing {
-  margin: 0;
+    font-size: 18px;
+    line-height: 26px;
+  }
+  &__number-features {
+    font-size: 14px;
+    line-height: 21px;
+  }
+  &__about-features {
+    margin: 0;
 
-  font-size: 18px;
-  line-height: 26px;
-}
-.features-place__housing-about {
-  margin: 0;
+    font-size: 14px;
+    line-height: 21px;
+  }
+  &__image-layout {
+    width: 320px;
+    height: 260px;
 
-  font-size: 14px;
-  line-height: 21px;
+    font-size: 0;
+
+    background: #ffffff url("../../img/photo-city@1x.jpg") 50% 100% no-repeat;
+    background-size: auto 260px;
+  }
+  &__housing {
+    margin: 0;
+
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
+  &__housing-about {
+    margin: 0;
+
+    font-size: 14px;
+    line-height: 21px;
+    text-transform: uppercase;
+  }
+  &__suvenirs {
+    margin: 0;
+
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
+  &__suvenirs-about{
+    margin: 0;
+
+    font-size: 14px;
+    line-height: 21px;
+    text-transform: uppercase;
+  }
+  &__food {
+    margin: 0;
+
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
+  &__food-about {
+    margin: 0;
+
+    font-size: 14px;
+    line-height: 21px;
+    text-transform: uppercase;
+  }
 }
