--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -1,14 +1,17 @@
-.main-header__list {
-  margin: 0;
-  padding: 0;
-}
-.main-header__item-link {
-  display: block;
+.main-header {
+  &__list {
+    margin: 0;
+    padding: 0;
+  }
+  &__item-link {
+    display: block;
 
-  color: #ffffff;
-  font-size: 18px;
-  line-height: 40px;
-  text-decoration: none;
+    color: #ffffff;
+    font-size: 18px;
+    line-height: 40px;
+    text-transform: uppercase;
+    text-decoration: none;
 
-  background-color: #81b3d2;
+    background-color: #81b3d2;
+  }
 }
