--- a/less/blocks/main-title.less
+++ b/less/blocks/main-title.less
@@ -1,12 +1,16 @@
-.main-title__title {
-  margin: 0;
+.main-title {
+  &__title {
+    margin: 0;
 
-  font-size: 18px;
-  line-height: 26px;
-}
-.main-title__reason {
-  margin: 0;
+    font-size: 18px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
+  &__reason {
+    margin: 0;
 
-  font-size: 14px;
-  line-height: 26px;
+    font-size: 14px;
+    line-height: 26px;
+    text-transform: uppercase;
+  }
 }
