--- a/less/global/scaffolding.less
+++ b/less/global/scaffolding.less
@@ -1,5 +1,6 @@
 body {
-  font-family: PT Sans, "Arial", sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
+  font-style: normal;
   margin: 0;
   padding: 0;
 }
