module3 error correction

--- a/less/blocks/features-bridge.less
+++ b/less/blocks/features-bridge.less
@@ -1,32 +1,35 @@
 .features-bridge {
-  &__head {
-    background-color: #81b3d2;
-    color: #ffffff;
-    text-transform: uppercase;
-  }
-  &__title {
-    margin: 0;
+}
+.features-bridge__head {
+  background-color: #81b3d2;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+.features-bridge__title {
+  margin: 0;
 
-    font-size: 18px;
-    line-height: 26px;
-  }
-  &__number-features {
-    font-size: 14px;
-    line-height: 21px;
-  }
-  &__about-features {
-    margin: 0;
+  font-size: 18px;
+  line-height: 26px;
+}
+.features-bridge__number-features {
+  font-size: 14px;
+  line-height: 21px;
+}
+.features-bridge__about-features {
+  margin: 0;
 
-    font-size: 14px;
-    line-height: 21px;
-  }
-  &__picture-layout {
-    width: 320px;
-    height: 260px;
+  font-size: 14px;
+  line-height: 21px;
+}
+.features-bridge__picture-layout {
+  width: 320px;
+  height: 260px;
 
-    font-size: 0;
+  font-size: 0;
 
-    background: #ffffff url("../../img/photo-bridge@1x.jpg") 50% 100% no-repeat;
-    background-size: auto 260px;
-  }
+  background-color: #ffffff;
+  background-image: url("../../img/photo-bridge@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+  background-size: auto 260px;
 }
