--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -1,13 +1,13 @@
 .form {
-  &__btn {
-    border: 0;
+}
+.form__btn {
+  border: 0;
 
-    font-size: 21px;
-    line-height: 26px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #ffffff;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #ffffff;
 
-    background-color: #81b3d2;
-  }
+  background-color: #81b3d2;
 }
