--- a/less/blocks/img-title.less
+++ b/less/blocks/img-title.less
@@ -1,12 +1,15 @@
 .img-title {
-  &__layout {
-    display: flex;
-    width: 320px;
-    height: 158px;
-    background: #ffffff url("../../img/bg-back-mobile@1x.jpg") 50% 100% no-repeat;
-  }
-  &__picture {
-    display: block;
-    margin: auto;
-  }
+}
+.img-title__layout {
+  display: flex;
+  width: 320px;
+  height: 158px;
+  background-color: #ffffff;
+  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 100%;
+}
+.img-title__picture {
+  display: block;
+  margin: auto;
 }
