--- a/less/blocks/impression.less
+++ b/less/blocks/impression.less
@@ -1,14 +1,14 @@
 .impression {
-  &__title {
-    margin: 0;
+}
+.impression__title {
+  margin: 0;
 
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-  }
-  &__label-text {
-    font-size: 18px;
-    line-height: 26px;
-    font-weight: bold;
-  }
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+.impression__label-text {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: bold;
 }
