--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -1,8 +1,10 @@
 .map {
-  &__layout {
-    width: 320px;
-    height: 350px;
+}
+.map__layout {
+  width: 320px;
+  height: 350px;
 
-    background: #ffffff url("../../img/bg-map-mobile@1x.jpg") no-repeat;
-  }
+  background-color: #ffffff;
+  background-image: url("../../img/bg-map-mobile@1x.jpg");
+  background-repeat: no-repeat;
 }
