--- a/less/blocks/person.less
+++ b/less/blocks/person.less
@@ -1,19 +1,20 @@
 .person {
-  &__title {
-    margin: 0;
+}
+.person__title {
+  margin: 0;
 
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-  }
-  &__label-text {
-    font-size: 14px;
-    line-height: 26px;
-  }
-  &__input::placeholder {
-    font-size: 18px;
-    line-height: 26px;
-    font-weight: bold;
-    color: #000000;
-  }
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+.person__label-text {
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+.person__input::placeholder {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: bold;
+  color: #000000;
 }
