--- a/less/blocks/emotions.less
+++ b/less/blocks/emotions.less
@@ -1,15 +1,15 @@
 .emotions {
-  &__title {
-    margin: 0;
+}
+.emotions__title {
+  margin: 0;
 
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-  }
-  &__text::placeholder {
-    font-size: 18px;
-    line-height: 26px;
-    font-weight: bold;
-    color: #000000;
-  }
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+.emotions__text::placeholder {
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: bold;
+  color: #000000;
 }
