--- a/less/blocks/explanation.less
+++ b/less/blocks/explanation.less
@@ -1,15 +1,16 @@
 .explanation {
-  &__title {
-    margin: 0;
+}
+.explanation__title {
+  margin: 0;
 
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-  }
-  &__about {
-    margin: 0;
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+.explanation__about {
+  margin: 0;
 
-    font-size: 14px;
-    line-height: 24px;
-  }
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
 }
