--- a/less/blocks/features-area.less
+++ b/less/blocks/features-area.less
@@ -1,23 +1,23 @@
 .features-area {
-  &__layout {
-    background-color: #eeeeee;
-  }
-  &__title {
-    margin: 0;
+}
+.features-area__layout {
+  background-color: #eeeeee;
+}
+.features-area__title {
+  margin: 0;
 
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-  }
-  &__number-features {
-    font-size: 14px;
-    line-height: 21px;
-  }
-  &__about-features {
-    margin: 0;
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+.features-area__number-features {
+  font-size: 14px;
+  line-height: 21px;
+}
+.features-area__about-features {
+  margin: 0;
 
-    font-size: 14px;
-    line-height: 21px;
-    text-transform: uppercase;
-  }
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
 }
