--- a/less/blocks/main-footer.less
+++ b/less/blocks/main-footer.less
@@ -1,17 +1,17 @@
 .main-footer {
-  &__hash {
-    margin: 0;
+}
+.main-footer__hash {
+  margin: 0;
 
-    font-size: 21px;
-    line-height: 26px;
-    text-transform: uppercase;
-    font-weight: bold;
-  }
-  &__copyright {
-    margin: 0;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.main-footer__copyright {
+  margin: 0;
 
-    font-size: 14px;
-    line-height: 26px;
-    text-transform: uppercase;
-  }
+  font-size: 14px;
+  line-height: 26px;
+  text-transform: uppercase;
 }
