--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -1,16 +1,16 @@
 .media {
-  &__title {
-    margin: 0;
+}
+.media__title {
+  margin: 0;
 
-    font-size: 18px;
-    line-height: 26px;
-    text-transform: uppercase;
-  }
-  &__motivation {
-    margin: 0;
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+.media__motivation {
+  margin: 0;
 
-    font-size: 14px;
-    line-height: 24px;
-    text-transform: uppercase;
-  }
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
 }
