--- a/less/blocks/photo.less
+++ b/less/blocks/photo.less
@@ -1,29 +1,29 @@
 .photo {
-  &__item {
-    margin: 0;
-  }
-  &__img {
-    display: block;
-  }
-  &__title {
-    margin: 0;
+}
+.photo__item {
+  margin: 0;
+}
+.photo__img {
+  display: block;
+}
+.photo__title {
+  margin: 0;
 
-    font-size: 14px;
-    line-height: 24px;
-    text-transform: uppercase;
-    font-weight: bold;
-  }
-  &__about {
-    margin: 0;
+  font-size: 14px;
+  line-height: 24px;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.photo__about {
+  margin: 0;
 
-    font-size: 14px;
-    line-height: 24px;
-  }
-  &__number-likes {
-    font-size: 14px;
-    line-height: 24px;
-    font-weight: bold;
-    color: inherit;
-    text-decoration: none;
-  }
+  font-size: 14px;
+  line-height: 24px;
+}
+.photo__number-likes {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: bold;
+  color: inherit;
+  text-decoration: none;
 }
