--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -1,17 +1,133 @@
 .main-header {
+  width: auto;
+}
+.main-header__navigation {
+  position: relative;
 }
 .main-header__list {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 .main-header__item-link {
   display: block;
+  padding: 8px 0;
 
-  color: #ffffff;
   font-size: 18px;
   line-height: 40px;
+  font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
+  text-align: center;
+  color: inherit;
 
-  background-color: #81b3d2;
+  box-sizing: border-box;
+}
+.main-header__logo {
+  display: block;
+}
+.main-header__logo-wrap {
+  position: absolute;
+  left: 50%;
+  margin-left: -51px;
+}
+
+@media (max-width: 767px) {
+  .main-header__navigation {
+    padding-bottom: 56px;
+    min-width: 320px;
+  }
+  .main-header__item-link {
+    padding: 7px 0;
+    border-top: 1px solid rgba(1, 1, 1, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
+    color: #ffffff;
+
+    background-color: #81b3d2;
+  }
+  .main-header__list li:first-of-type a {
+    border-top-color: transparent;
+  }
+  .main-header__list li:last-of-type a {
+    border-bottom: none;
+    padding-bottom: 8px;
+    box-shadow: inset 0 -7px 7px -7px rgba(27, 37, 44, 0.2);
+  }
+  .main-header__toggle {
+    position: absolute;
+
+    right: 20px;
+
+    width: 23px;
+    height: 23px;
+    border: 0;
+    padding: 0;
+
+    font-size: 0;
+
+    background-color: transparent;
+    cursor: pointer;
+  }
+  .main-header__navigation--opened .main-header__toggle {
+    top: 17px;
+
+    &::before,
+    &::after {
+      content: "";
+      position: absolute;
+      left: -2px;
+      top: 10px;
+
+      width: 27px;
+      height: 4px;
+
+      background-color: #ffffff;
+      transform: rotate(45deg);
+    }
+    &::after {
+      transform: rotate(-45deg);
+    }
+  }
+  .main-header__navigation--closed .main-header__toggle {
+    bottom: 18px;
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+
+      height: 4px;
+
+      background-color: #81b3d2;
+      box-shadow: 0 8px 0 0 #81b3d2,
+      0 16px 0 0 #81b3d2;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+  .main-header__list {
+    display: flex;
+    flex-direction: row;
+  }
+  .main-header__item {
+    width: 20%;
+  }
+  .main-header__item:nth-of-type(2) {
+    margin-right: auto;
+  }
+  .main-header__toggle {
+    display: none;
+  }
+  .main-header__logo-wrap {
+    top: 0;
+  }
+}
+@media (min-width: 768px) {
+  .main-header__navigation {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
