--- a/less/style.less
+++ b/less/style.less
@@ -7,11 +7,9 @@
 @import "blocks/contact-inf.less";
 @import "blocks/emotions.less";
 @import "blocks/explanation.less";
-@import "blocks/features-area.less";
 @import "blocks/features-bridge.less";
+@import "blocks/features-other.less";
 @import "blocks/features-place.less";
-@import "blocks/features-road.less";
-@import "blocks/features-tourists.less";
 @import "blocks/form.less";
 @import "blocks/img-title.less";
 @import "blocks/impression.less";
