--- a/less/blocks/features-bridge.less
+++ b/less/blocks/features-bridge.less
@@ -1,9 +1,20 @@
-.features-bridge {
+.features-bridge-wrap {
+  max-width: 1200px;
+  min-width: 320px;
+  margin: 0 auto;
 }
 .features-bridge__head {
+  min-height: 191px;
+  padding: 40px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
   background-color: #81b3d2;
   color: #ffffff;
   text-transform: uppercase;
+  text-align: center;
+  box-sizing: border-box;
 }
 .features-bridge__title {
   margin: 0;
@@ -22,7 +33,6 @@
   line-height: 21px;
 }
 .features-bridge__picture-layout {
-  width: 320px;
   height: 260px;
 
   font-size: 0;
@@ -30,6 +40,18 @@
   background-color: #ffffff;
   background-image: url("../../img/photo-bridge@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 100%;
-  background-size: auto 260px;
+  background-position: 50% 50%;
+  background-size: cover;
+}
+@media (min-width: 768px) {
+  .features-bridge-wrap {
+    display: flex;
+  }
+  .features-bridge__head {
+    width: 33%;
+    order: 2;
+  }
+  .features-bridge__picture-layout {
+    width: 67%;
+  }
 }
