--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -1,5 +1,6 @@
 .main-header {
   width: auto;
+  min-width: 320px;
 }
 .main-header__navigation {
   position: relative;
@@ -35,7 +36,6 @@
 @media (max-width: 767px) {
   .main-header__navigation {
     padding-bottom: 56px;
-    min-width: 320px;
   }
   .main-header__item-link {
     padding: 7px 0;
@@ -91,6 +91,7 @@
   }
   .main-header__navigation--closed .main-header__toggle {
     bottom: 18px;
+
     &::before {
       content: "";
       position: absolute;
@@ -105,9 +106,15 @@
       0 16px 0 0 #81b3d2;
     }
   }
+  .main-header__navigation--closed > .main-header__list {
+    display: none;
+  }
 }
-
 @media (min-width: 768px) {
+  .main-header__navigation {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
   .main-header__list {
     display: flex;
     flex-direction: row;
@@ -123,11 +130,5 @@
   }
   .main-header__logo-wrap {
     top: 0;
-  }
-}
-@media (min-width: 768px) {
-  .main-header__navigation {
-    max-width: 1200px;
-    margin: 0 auto;
   }
 }
