--- a/less/blocks/main-title.less
+++ b/less/blocks/main-title.less
@@ -1,16 +1,41 @@
-.main-title {
+.main-title__wrap {
+  display: flex;
 }
 .main-title__title {
-  margin: 0;
+
+  justify-content: center;
+
+  margin: 0 auto;
+  padding: 0 10px;
+  padding-top: 43px;
 
   font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
+  text-align: center;
 }
 .main-title__reason {
-  margin: 0;
+  margin: 0 auto;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
   font-size: 14px;
   line-height: 26px;
   text-transform: uppercase;
+  text-align: center;
+}
+@media (max-width: 767px) {
+  .main-title{
+    min-width: 280px;
+    padding: 0 20px;
+  }
+}
+@media (min-width: 768px) {
+  .main-title__title {
+    width: 490px;
+    padding-top: 51px;
+  }
+  .main-title__reason {
+    padding-bottom: 55px;
+  }
 }
