finish index-page

--- a/less/blocks/features-other.less
+++ b/less/blocks/features-other.less
@@ -1,5 +1,7 @@
 .features-other__wrap {
   background-color: #eeeeee;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .features-other__layout {
   display: flex;
