--- a/less/blocks/location.less
+++ b/less/blocks/location.less
@@ -1,21 +1,34 @@
-.location {
+.location__wrap {
+  min-width: 280px;
+  padding: 0 20px;
 }
 .location__title {
   margin: 0;
+  padding-top: 28px;
+  padding-bottom: 28px;
 
   font-size: 21px;
   line-height: 26px;
   text-transform: uppercase;
+  text-align: center;
 }
 .location__about {
+  display: flex;
   margin: 0;
 
   font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
+  text-align: center;
 }
 .location__button {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 16px 0;
   border: 0;
+  margin-top: 35px;
+  margin-bottom: 49px;
 
   font-size: 21px;
   line-height: 26px;
@@ -23,4 +36,20 @@
   color: #ffffff;
 
   background-color: #81b3d2;
+  cursor: pointer;
+}
+
+@media (min-width: 768px) {
+  .location__title {
+    padding-top: 52px;
+    padding-bottom: 35px;
+  }
+  .location__about {
+    max-width: 440px;
+    margin: 0 auto;
+  }
+  .location__button {
+    max-width: 458px;
+    margin: 42px auto 53px auto;
+  }
 }
