--- a/less/blocks/main-footer.less
+++ b/less/blocks/main-footer.less
@@ -1,4 +1,8 @@
-.main-footer {
+.main-footer__wrap {
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 .main-footer__hash {
   margin: 0;
@@ -7,11 +11,51 @@
   line-height: 26px;
   text-transform: uppercase;
   font-weight: bold;
+  text-align: center;
 }
-.main-footer__copyright {
-  margin: 0;
+.main-footer__socials {
+  display: flex;
+  justify-content: center;
+}
+.main-footer__copyright-wrap {
+  display: flex;
+  justify-content: center;
 
   font-size: 14px;
   line-height: 26px;
   text-transform: uppercase;
+}
+.main-footer__copyright {
+  margin: 0;
+  margin-right: 11px;
+  align-self: center;
+}
+.main-footer__copyright-img {
+  display: block;
+}
+@media (max-width: 767px) {
+  .main-footer__hash {
+    padding-top: 35px;
+    padding-bottom: 35px;
+  }
+  .main-footer__copyright-wrap {
+    margin-top: 40px;
+    margin-bottom: 23px;
+  }
+}
+@media (min-width: 768px) {
+  .main-footer__wrap {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 36px 60px;
+  }
+}
+@media (min-width: 1000px) {
+  .main-footer__copyright-wrap {
+    margin-right: -16px;
+  }
+  .main-footer__hash {
+    margin-left: 72px;
+  }
 }
