--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -1,10 +1,10 @@
-.map {
-}
 .map__layout {
-  width: 320px;
+  width: 100%;
   height: 350px;
 
   background-color: #ffffff;
   background-image: url("../../img/bg-map-mobile@1x.jpg");
   background-repeat: no-repeat;
+  background-position: 100% 0;
+  background-size: cover;
 }
