start photo page

--- a/less/blocks/media.less
+++ b/less/blocks/media.less
@@ -1,4 +1,11 @@
-.media {
+.media__wrap {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.media__head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .media__title {
   margin: 0;
@@ -13,4 +20,41 @@
   font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
+  text-align: center;
+}
+@media(max-width: 767px) {
+  .media__head {
+    padding: 0 20px;
+  }
+  .media__title {
+    padding-top: 38px;
+    padding-bottom: 35px;
+  }
+  .media__motivation {
+    padding-bottom: 27px;
+  }
+}
+@media(min-width: 768px) {
+  .media__wrap {
+    padding: 0 60px
+  }
+  .media__title {
+    padding-top: 70px;
+    padding-bottom: 35px;
+
+    font-size: 26px;
+    line-height: 30px;
+  }
+  .media__motivation {
+    max-width: 430px;
+    padding-bottom: 70px;
+  }
+}
+@media(min-width: 1200px) {
+  .media__wrap {
+    padding: 0;
+  }
+  .media__title {
+    padding-top: 107px;
+  }
 }
