--- a/less/blocks/features-place.less
+++ b/less/blocks/features-place.less
@@ -1,10 +1,14 @@
-.features-place {
-  max-width: 1200px;
-  margin: 0 auto;
+.features-place__wrap {
+  .container();
+}
+.features-place__head-layout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #81b3d2;
 }
 .features-place__head {
   margin: 0;
-
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -15,7 +19,6 @@
   color: #ffffff;
   text-align: center;
 
-  background-color: #81b3d2;
   box-sizing: border-box;
 }
 .features-place__title {
@@ -58,17 +61,26 @@
   line-height: 21px;
   text-transform: uppercase;
 }
-@media (max-width: 767px) {
+@media @mobile {
+  .features-place__head-layout {
+    width: 100%;
+  }
   .features-place__head {
-    min-width: 280px;
+    width: 280px;
     min-height: 208px;
-    padding: 55px 25px 40px;
+    padding-top: 55px;
+    padding-bottom: 40px;
+
   }
   .features-place__image-layout {
     height: 260px
   }
   .features-place__entertainment {
-    min-width: 280px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+
+    width: 280px;
     padding: 0 20px;
   }
   .features-place__entertainment-item-layout {
@@ -80,14 +92,20 @@
     padding-bottom: 35px;
   }
 }
-@media (min-width: 768px) {
+@media @tablet {
   .features-place__head-wrap {
     display: flex;
   }
-  .features-place__head {
+  .features-place__head-layout {
     width: 33%;
     height: 256px;
-    padding: 47px 47px;
+  }
+  .features-place__head {
+    height: 100%;
+    padding: 47px;
+  }
+  .features-place__title {
+    padding: 0 60px;
   }
   .features-place__image-layout {
     width: 67%;
