--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -5,6 +5,7 @@
   background-color: #ffffff;
   background-image: url("../../img/bg-map-mobile@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 100% 0;
+  background-position: center top;
   background-size: cover;
+  .container();
 }
