--- a/less/blocks/contact-inf.less
+++ b/less/blocks/contact-inf.less
@@ -1,20 +1,51 @@
-.contact-inf {
+.contact-inf__wrap {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  .container();
+  width: 280px;
 }
 .contact-inf__title {
   margin: 0;
+  padding-bottom: 25px;
 
   font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
 }
+.contact-inf__labl-wap {
+  display: flex;
+  flex-direction: column;
+}
+.contact-inf__label {
+  display: flex;
+  flex-direction: column;
+}
 .contact-inf__label-text {
+  padding-bottom: 8px;
+  padding-left: 22px;
   font-size: 14px;
   line-height: 26px;
   text-transform: uppercase;
+}
+.contact-inf__input {
+  padding: 16px 58px 13px 22px;
+  margin-bottom: 45px;
+  border: none;
+  background-color: #f2f2f2;
+}
+.contact-inf__label:last-of-type .contact-inf__input {
+  margin-bottom: 0;
 }
 .contact-inf__input::placeholder {
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
   color: #000000;
+}
+@media @mobile {
+  .contact-inf__wrap {
+    border-top: 1px solid #e5e5e5;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
