--- a/less/blocks/features-bridge.less
+++ b/less/blocks/features-bridge.less
@@ -1,20 +1,25 @@
 .features-bridge-wrap {
-  max-width: 1200px;
-  min-width: 320px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  .container();
+}
+.features-bridge__background {
+  padding: 40px 30px;
+  height: 191px;
+  background-color: #81b3d2;
+  box-sizing: border-box;
 }
 .features-bridge__head {
-  min-height: 191px;
-  padding: 40px 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0 auto;
+  min-height: 105px;
+  width: 280px;
 
-  background-color: #81b3d2;
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
-  box-sizing: border-box;
 }
 .features-bridge__title {
   margin: 0;
@@ -33,23 +38,29 @@
   line-height: 21px;
 }
 .features-bridge__picture-layout {
-  height: 260px;
+  height: 256px;
 
   font-size: 0;
 
   background-color: #ffffff;
   background-image: url("../../img/photo-bridge@1x.jpg");
   background-repeat: no-repeat;
-  background-position: 50% 50%;
+  background-position: center top;
   background-size: cover;
 }
-@media (min-width: 768px) {
+@media @tablet {
   .features-bridge-wrap {
     display: flex;
+    flex-direction: row;
+  }
+  .features-bridge__background {
+    width: 33%;
+    height: 256px;
+    order: 2;
   }
   .features-bridge__head {
-    width: 33%;
-    order: 2;
+    width: 100%;
+    height: 100%;
   }
   .features-bridge__picture-layout {
     width: 67%;
