--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -1,11 +1,12 @@
-.main-header {
-  width: auto;
-  min-width: 320px;
+.main-header__wrap {
+  .container();
 }
 .main-header__navigation {
   position: relative;
 }
 .main-header__list {
+  display: flex;
+  flex-direction: column;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -33,7 +34,7 @@
   margin-left: -51px;
 }
 
-@media (max-width: 767px) {
+@media @mobile {
   .main-header__navigation {
     padding-bottom: 56px;
   }
@@ -110,13 +111,8 @@
     display: none;
   }
 }
-@media (min-width: 768px) {
-  .main-header__navigation {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  .main-header__list {
-    display: flex;
+@media @tablet {
+.main-header__list {
     flex-direction: row;
   }
   .main-header__item {
