--- a/less/blocks/person.less
+++ b/less/blocks/person.less
@@ -1,20 +1,56 @@
-.person {
+.person__wrap {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  .container();
+  width: 280px;
 }
 .person__title {
   margin: 0;
 
   font-size: 18px;
   line-height: 26px;
+  padding-bottom: 20px;
   text-transform: uppercase;
+  text-align: center;
+}
+.person__label-wrap {
+  display: flex;
+  flex-direction: column;
+}
+.person__label {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 .person__label-text {
   font-size: 14px;
   line-height: 26px;
   text-transform: uppercase;
 }
+.person__input {
+  flex-grow: 1;
+  min-width: 0;
+  margin-left: 14px;
+  margin-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 22px;
+  border: none;
+  background-color: #f2f2f2;
+}
+.person__label:last-of-type .person__input {
+  margin-bottom: 0;
+}
 .person__input::placeholder {
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
   color: #000000;
+}
+@media @mobile {
+  .person__wrap {
+    border-top: 1px solid #e5e5e5;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
