--- a/less/blocks/photo.less
+++ b/less/blocks/photo.less
@@ -31,12 +31,15 @@
   color: inherit;
   text-decoration: none;
 }
-@media(max-width: 767px) {
+@media @mobile {
   .photo__item {
     align-self: center;
     padding: 22px 20px 15px 20px;
     padding-top: 22px;
     border-top: 1px solid #e5e5e5;
+  }
+  .photo__item:last-of-type {
+    border-bottom: 1px solid #e5e5e5;
   }
   .photo__img {
     margin-bottom: 16px;
@@ -45,7 +48,7 @@
     padding-left: 37px;
   }
 }
-@media(min-width: 768px) {
+@media @tablet {
   .photo__wrap {
     flex-direction: row;
     justify-content: space-between;
@@ -72,7 +75,7 @@
     background-color: #f2f2f2;
   }
 }
-@media(min-width: 1200px) {
+@media @desktop {
   .photo__item:not(:first-of-type) {
     width: 33.3%;
   }
