--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -1,8 +1,18 @@
 .video__text-wrap {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 450px;
+  padding-top: 33px;
+  padding-bottom: 35px;
+  margin: 0 auto;
 }
 .video__title {
   margin: 0;
+  padding-top: 33px;
+  padding: 0 20px;
+  padding-bottom: 35px;
 
   font-size: 18px;
   line-height: 26px;
@@ -10,8 +20,137 @@
 }
 .video__about {
   margin: 0;
+  padding: 0 20px;
 
   font-size: 14px;
   line-height: 24px;
   text-transform: uppercase;
+  text-align: center;
+}
+.video__video-player {
+  position: relative;
+
+  display: flex;
+  flex-direction: column;
+  height: 201px;
+  padding: 0 20px;
+
+  background-color: #ffffff;
+  background-image: url(../../img/video-mobile@1x.jpg);
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
+}
+.video__remote-layout {
+  bottom: 0;
+
+  display: flex;
+  margin-top: auto;
+  order: 1;
+  width: 100%;
+  height: 45px;
+  padding: 0 22px;
+
+  background-color: rgba(0, 0, 0, 0.6 );
+  box-sizing: border-box;
+}
+.video__remote-line {
+  position: relative;
+  width: 100%;
+  height: 3px;
+  margin: auto;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.video__remote-dot {
+  position: relative;
+  left: 20%;
+  top: -3px;
+  width: 9px;
+  height: 9px;
+
+  background-color: #ffffff;
+  border-radius: 50%;
+}
+.video__userbar-layout {
+  display: flex;
+  justify-content: space-between;
+}
+.video__replay {
+  padding: 0;
+  border: 0;
+  width: 16px;
+  height: 20px;
+  font-size: 0;
+  background-color: transparent;
+  background-image: url(../../img/icon-video-replay.svg);
+}
+.video__subtitle {
+  padding: 0;
+  border: 0;
+  margin-right: 31px;
+  margin-left: auto;
+  width: 32px;
+  height: 20px;
+  font-size: 0;
+  background-color: transparent;
+  background-image: url(../../img/icon-video-subtitles.svg);
+}
+.video__full-screan {
+  padding: 0;
+  border: 0;
+  width: 20px;
+  height: 20px;
+  font-size: 0;
+  background-color: transparent;
+  background-image: url(../../img/icon-video-fullscreen.svg);
+}
+@media @mobile {
+  .video__userbar-layout {
+    position: relative;
+    top: 100%;
+    height: 66px;
+    padding: 0 24px;
+    padding-top: 23px;
+
+
+    background-color: #f2f2f2;
+    box-sizing: border-box;
+  }
+}
+@media @tablet {
+  .video__text-wrap {
+    padding-top: 62px;
+    padding-bottom: 72px;
+  }
+  .video__title {
+    font-size: 30px;
+    line-height: 30px;
+  }
+  .video__video-player {
+    height: 500px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .video__remote-line {
+    margin-left: 14%;
+    margin-right: 25%;
+  }
+  .video__remote-layout {
+    height: 92px;
+    padding: 0;
+  }
+  .video__userbar-layout {
+    position: absolute;
+    bottom: 38px;
+    width: 100%;
+    padding-right: 41px;
+    padding-left: 35px;
+    box-sizing: border-box;
+  }
+}
+@media @desktop {
+  .video__text-wrap {
+    padding-top: 66px;
+  }
 }
