--- a/less/global/mixins.less
+++ b/less/global/mixins.less
@@ -1,12 +1,9 @@
 .container() {
   width: auto;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 
-  @media (min-width: 768px) {
-    width: 768px;
-  }
-
-  @media (min-width: 1200px) {
+  @media @desktop {
     width: 1200px;
   }
 }
