--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
-@import "mixins.less";
+@import "global/mixins.less";
 @import "global/normalize.less";
+@import "global/variables.less";
 @import "global/fonts.less";
 @import "global/scaffolding.less";
 
