--- a/less/blocks/impression.less
+++ b/less/blocks/impression.less
@@ -1,14 +1,74 @@
-.impression {
+.imression__wrap {
+  .container();
+  max-width: 280px;
+  padding-top: 18px;
+  padding-bottom: 40px;
 }
 .impression__title {
   margin: 0;
+  padding-bottom: 45px;
 
   font-size: 18px;
   line-height: 26px;
+  text-align: center;
   text-transform: uppercase;
+}
+.impression__label-wrap {
+  display: flex;
+  flex-direction: column;
+}
+.impression__label {
+  position: relative;
+  padding-left: 80px;
+  margin-bottom: 48px;
+  cursor: pointer;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 56px;
+    height: 56px;
+    background-color: #f2f2f2;
+    border-radius: 50%;
+    left: 0;
+    top: -13px;
+  }
+}
+.impression__label:last-of-type {
+  margin-bottom: 0;
+}
+
+.impression__input {
+  display: none;
+}
+.impression__input:checked + .impression__label::after {
+  content: "";
+  position: absolute;
+  left: 17px;
+  top: 5px;
+  width: 22px;
+  height: 22px;
+  background-color: #333333;
+  border-radius: 50%;
 }
 .impression__label-text {
   font-size: 18px;
   line-height: 26px;
   font-weight: bold;
+}
+@media @mobile {
+  .imression__wrap {
+    border-top: 1px solid #e5e5e5;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+@media @tablet {
+  .imression__wrap {
+    margin-left: 0;
+  }
+  .impression__title {
+    text-align: left;
+    font-size: 21px;
+  }
 }
