--- a/less/blocks/main-footer.less
+++ b/less/blocks/main-footer.less
@@ -1,7 +1,8 @@
 .main-footer__wrap {
   display: flex;
   flex-direction: column;
-  .container();
+  margin-left: auto;
+  margin-right: auto;
 }
 .main-footer__hash {
   margin: 0;
@@ -34,7 +35,6 @@
 }
 @media @mobile {
   .main-footer__hash {
-    padding-top: 35px;
     padding-bottom: 35px;
   }
   .main-footer__copyright-wrap {
@@ -44,13 +44,19 @@
 }
 @media @tablet {
   .main-footer__wrap {
+    max-width: 940px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 36px 60px;
+    padding-top: 0;
   }
 }
 @media @desktop {
+  .main-footer__wrap {
+    padding-left: 120px;
+    padding-right: 120px;
+  }
   .main-footer__copyright-wrap {
     margin-right: -16px;
   }
