--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -1,6 +1,6 @@
 .map__layout {
-  width: 100%;
   height: 350px;
+  margin-bottom: 36px;
 
   background-color: #ffffff;
   background-image: url("../../img/bg-map-mobile@1x.jpg");
