--- a/less/blocks/person.less
+++ b/less/blocks/person.less
@@ -1,8 +1,8 @@
 .person__wrap {
+  .container();
+  max-width: 280px;
   padding-top: 20px;
   padding-bottom: 20px;
-  .container();
-  width: 280px;
 }
 .person__title {
   margin: 0;
@@ -52,5 +52,14 @@
     border-top: 1px solid #e5e5e5;
     padding-left: 20px;
     padding-right: 20px;
+  }
+}
+@media @tablet {
+  .person__wrap {
+    margin-right: 0;
+  }
+  .person__title {
+    text-align: left;
+    font-size: 21px;
   }
 }
