--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -34,6 +34,7 @@
   flex-direction: column;
   height: 201px;
   padding: 0 20px;
+  margin-bottom: 140px;
 
   background-color: #ffffff;
   background-image: url(../../img/video-mobile@1x.jpg);
@@ -112,7 +113,6 @@
     padding: 0 24px;
     padding-top: 23px;
 
-
     background-color: #f2f2f2;
     box-sizing: border-box;
   }
@@ -130,6 +130,7 @@
     height: 500px;
     max-width: 800px;
     margin: 0 auto;
+    margin-bottom: 76px;
     padding: 0;
   }
   .video__remote-line {
@@ -152,5 +153,8 @@
 @media @desktop {
   .video__text-wrap {
     padding-top: 66px;
+  }
+  .video__video-player {
+    margin-bottom: 121px
   }
 }
