--- a/less/blocks/attraction.less
+++ b/less/blocks/attraction.less
@@ -44,7 +44,7 @@
   left: 17px;
   width: 24px;
   height: 16px;
-  background-image: url(../../img/icon-tick.svg);
+  background-image: url(../img/icon-tick.svg);
   background-repeat: no-repeat;
 }
 .attraction__label:last-of-type {
