--- a/less/blocks/emotions.less
+++ b/less/blocks/emotions.less
@@ -19,6 +19,7 @@
 .emotions__text {
   border: none;
   background-color: #f2f2f2;
+  resize: none;
 }
 .emotions__text::placeholder {
   padding-top: 22px;
