--- a/less/blocks/features-bridge.less
+++ b/less/blocks/features-bridge.less
@@ -43,7 +43,7 @@
   font-size: 0;
 
   background-color: #ffffff;
-  background-image: url("../../img/photo-bridge@1x.jpg");
+  background-image: url("../img/photo-bridge@1x.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
