--- a/less/blocks/features-place.less
+++ b/less/blocks/features-place.less
@@ -42,7 +42,7 @@
   font-size: 0;
 
   background-color: #ffffff;
-  background-image: url("../../img/photo-city@1x.jpg");
+  background-image: url("../img/photo-city@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
