--- a/less/blocks/promo-view.less
+++ b/less/blocks/promo-view.less
@@ -3,7 +3,7 @@
   display: flex;
 
   background-color: #ffffff;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: cover;
