--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -37,7 +37,7 @@
   margin-bottom: 140px;
 
   background-color: #ffffff;
-  background-image: url(../../img/video-mobile@1x.jpg);
+  background-image: url(../img/video-mobile@1x.jpg);
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -83,7 +83,7 @@
   height: 20px;
   font-size: 0;
   background-color: transparent;
-  background-image: url(../../img/icon-video-replay.svg);
+  background-image: url(../img/icon-video-replay.svg);
 }
 .video__subtitle {
   padding: 0;
@@ -94,7 +94,7 @@
   height: 20px;
   font-size: 0;
   background-color: transparent;
-  background-image: url(../../img/icon-video-subtitles.svg);
+  background-image: url(../img/icon-video-subtitles.svg);
 }
 .video__full-screan {
   padding: 0;
@@ -103,7 +103,7 @@
   height: 20px;
   font-size: 0;
   background-color: transparent;
-  background-image: url(../../img/icon-video-fullscreen.svg);
+  background-image: url(../img/icon-video-fullscreen.svg);
 }
 @media @mobile {
   .video__userbar-layout {
