--- a/less/blocks/img-title.less
+++ b/less/blocks/img-title.less
@@ -5,7 +5,7 @@
   width: 320px;
   height: 158px;
   background-color: #ffffff;
-  background-image: url("../../img/bg-back-mobile@1x.jpg");
+  background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 100%;
 }
