--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -3,7 +3,7 @@
   margin-bottom: 36px;
 
   background-color: #ffffff;
-  background-image: url("../../img/bg-map-mobile@1x.jpg");
+  background-image: url("../img/bg-map-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
