--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -4,11 +4,15 @@
   flex-direction: column;
   .container();
 }
+.form__impression {
+  padding-top: 18px;
+  padding-bottom: 43px;
+}
 .form__btn {
   width: 280px;
   max-width: 324px;
-  margin-bottom: 70px;
-  padding: 14px 0;
+  margin-bottom: 73px;
+  padding: 16px 0;
   border: 0;
   align-self: center;
 
