--- a/less/blocks/main-title.less
+++ b/less/blocks/main-title.less
@@ -28,13 +28,16 @@
     width: 280px;
     padding: 0 20px;
     padding-top: 37px;
-    padding-bottom: 30px;
+    padding-bottom: 25px;
   }
 }
 @media @tablet {
   .main-title__wrap {
     width: 490px;
-    padding-top: 45px;
-    padding-bottom: 55px;
+    padding-top: 50px;
+    padding-bottom: 48px;
+  }
+  .main-title__title {
+    font-size: 21px;
   }
 }
