--- a/less/blocks/emotions.less
+++ b/less/blocks/emotions.less
@@ -3,13 +3,13 @@
   display: flex;
   flex-direction: column;
   .container();
-  padding-top: 20px;
+  padding-top: 18px;
   padding-bottom: 51px;
   max-width: 960px;
 }
 .emotions__title {
   margin: 0;
-  padding-bottom: 15px;
+  padding-bottom: 17px;
 
   font-size: 18px;
   line-height: 26px;
@@ -17,15 +17,17 @@
   text-transform: uppercase;
 }
 .emotions__text {
+  height: 160px;
+  padding: 0;
   border: none;
   background-color: #f2f2f2;
   resize: none;
 }
 .emotions__text::placeholder {
-  padding-top: 22px;
-  padding-right: 33px;
-  padding-left: 21px;
-  font-size: 18px;
+  padding-top: 16px;
+  padding-right: 10px;
+  padding-left: 19px;
+  font-size: 16px;
   line-height: 26px;
   font-weight: bold;
   color: #000000;
