--- a/less/blocks/features-other.less
+++ b/less/blocks/features-other.less
@@ -7,14 +7,15 @@
   flex-direction: column;
   justify-content: space-between;
   width: 280px;
-  min-height: 168px;
-  padding: 30px 15px;
+  min-height: 157px;
+  padding: 0 15px;
+  padding-top: 30px;
+  padding-bottom: 16px;
   margin: 0 auto;
 
   text-align: center;
 
   box-sizing: border-box;
-
 }
 .features-other__title {
   margin: 0;
@@ -33,6 +34,7 @@
   font-size: 14px;
   line-height: 21px;
   text-transform: uppercase;
+  // -webkit-hyphens: auto;
 }
 @media @mobile {
   .features-other__wrap {
@@ -52,7 +54,23 @@
   }
   .features-other__layout {
     width: 33%;
-    min-height: 256px;
-    padding: 45px;
+    height: 256px;
+    padding: 0 49px;
+    padding-top: 45px;
+    padding-bottom: 45px;
+  }
+  .features-other__title {
+    width: 160px;
+    align-self: center;
+    font-size: 21px;
+  }
+  .features-other__about-features {
+    // min-width: 156px;
+    // max-width: 260px;
+  }
+}
+@media @desktop {
+  .features-other__layout {
+    padding-bottom: 64px;
   }
 }
