--- a/less/blocks/impression.less
+++ b/less/blocks/impression.less
@@ -1,12 +1,10 @@
 .imression__wrap {
   .container();
   max-width: 280px;
-  padding-top: 18px;
-  padding-bottom: 40px;
 }
 .impression__title {
   margin: 0;
-  padding-bottom: 45px;
+  padding-bottom: 37px;
 
   font-size: 18px;
   line-height: 26px;
@@ -20,7 +18,7 @@
 .impression__label {
   position: relative;
   padding-left: 80px;
-  margin-bottom: 48px;
+  margin-bottom: 43px;
   cursor: pointer;
 
   &::before {
@@ -45,7 +43,7 @@
   content: "";
   position: absolute;
   left: 17px;
-  top: 5px;
+  top: 3px;
   width: 22px;
   height: 22px;
   background-color: #333333;
@@ -65,7 +63,17 @@
 }
 @media @tablet {
   .imression__wrap {
+    position: relative;
     margin-left: 0;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 1px;
+      background-color: #dbdbdb;
+      top: 0;
+      bottom: 0;
+      right: 0;
+    }
   }
   .impression__title {
     text-align: left;
