--- a/less/blocks/location.less
+++ b/less/blocks/location.less
@@ -5,7 +5,7 @@
 .location__title {
   margin: 0;
   padding-top: 28px;
-  padding-bottom: 28px;
+  padding-bottom: 21px;
 
   font-size: 21px;
   line-height: 26px;
@@ -43,12 +43,23 @@
 }
 
 @media @tablet {
+  .location__wrap {
+    padding: 0;
+  }
   .location__title {
     padding-top: 52px;
-    padding-bottom: 35px;
+    padding-bottom: 30px;
+    font-size: 30px;
+    line-height: 30px;
   }
   .location__button {
     margin-top: 42px;
-    margin-bottom: 53px;
+    margin-bottom: 57px;
   }
+}
+@media @desktop {
+    .location__button {
+      margin-top: 47px;
+      margin-bottom: 67px;
+    }
 }
