--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -118,6 +118,9 @@
   .main-header__item {
     width: 20%;
   }
+  .main-header__item-link {
+    font-size: 14px;
+  }
   .main-header__item:nth-of-type(2) {
     margin-right: auto;
   }
