--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  max-width: 450px;
+  max-width: 430px;
   padding-top: 33px;
   padding-bottom: 35px;
   margin: 0 auto;
@@ -12,7 +12,7 @@
   margin: 0;
   padding-top: 33px;
   padding: 0 20px;
-  padding-bottom: 35px;
+  padding-bottom: 26px;
 
   font-size: 18px;
   line-height: 26px;
@@ -64,7 +64,7 @@
 }
 .video__remote-dot {
   position: relative;
-  left: 20%;
+  left: 15%;
   top: -3px;
   width: 9px;
   height: 9px;
@@ -119,12 +119,15 @@
 }
 @media @tablet {
   .video__text-wrap {
-    padding-top: 62px;
-    padding-bottom: 72px;
+    padding-top: 67px;
+    padding-bottom: 75px;
   }
   .video__title {
     font-size: 30px;
     line-height: 30px;
+  }
+  .video__about {
+    padding: 0;
   }
   .video__video-player {
     height: 500px;
@@ -136,6 +139,9 @@
   .video__remote-line {
     margin-left: 14%;
     margin-right: 25%;
+  }
+  .video__remote-dot {
+    left: 29%;
   }
   .video__remote-layout {
     height: 92px;
@@ -152,9 +158,20 @@
 }
 @media @desktop {
   .video__text-wrap {
-    padding-top: 66px;
+    padding-top: 71px;
+    padding-bottom: 71px;
+  }
+  .video__title {
+    padding-bottom: 28px;
   }
   .video__video-player {
     margin-bottom: 121px
+  }
+  .video__remote-line {
+    margin-left: 11.5%;
+    margin-right: 21%;
+  }
+  .video__remote-dot {
+    left: 21%;
   }
 }
