pixel-perfect final

--- a/less/blocks/main-footer.less
+++ b/less/blocks/main-footer.less
@@ -62,14 +62,10 @@
   .main-footer__socials {
     padding-right: 100px;
   }
-//   .main-footer__wrap {
-//     padding-left: 120px;
-//     padding-right: 120px;
-//   }
-//   .main-footer__copyright-wrap {
-//     margin-right: -16px;
-//   }
-//   .main-footer__hash {
-//     margin-left: 72px;
-//   }
+  .main-footer__socials--form {
+    padding-right: 22px;
+  }
+  .main-footer__wrap--form {
+    padding-right: 121px;
+  }
 }
