--- a/less/blocks/attraction.less
+++ b/less/blocks/attraction.less
@@ -68,13 +68,14 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    max-width: 940px;
+    max-width: 960px;
     padding-bottom: 0;
   }
   .attraction__title {
     width: 280px;
     padding-left: 60px;
     padding-right: 60px;
+    padding-bottom: 58px;
     font-size: 21px;
     align-self: center;
     background-color: #ffffff;
@@ -84,15 +85,22 @@
       z-index: -1;
       left: 0;
       right: 0;
-      top: 33px;
+      top: 43px;
       height: 1px;
       background-color: #dbdbdb;
     }
   }
+  .attraction__label {
+    margin-bottom: 62px;
+    margin-left: 31px;
+  }
+  .attraction__label:nth-of-type(3n-1) {
+    margin-bottom: 0;
+  }
   .attraction__checkbox-wrap {
     display: flex;
     flex-direction: column;
-    height: 210px;
+    height: 180px;
     align-content: center;
     flex-wrap: wrap;
 
@@ -102,10 +110,34 @@
   }
 }
 @media @desktop {
+  .attraction__wrap {
+    padding-bottom: 3px;
+  }
+  .attraction__title {
+    padding-bottom: 55px;
+  }
   .attraction__checkbox-wrap {
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: nowrap;
     height: auto;
+  }
+  .attraction__label {
+    margin-left: 0;
+    width: 205px;
+  }
+  .attraction__label:nth-of-type(1) {
+    order: 1;
+  }
+  .attraction__label:nth-of-type(2) {
+    order: 3;
+    margin-left: 25px;
+  }
+  .attraction__label:nth-of-type(3) {
+    order: 2;
+    margin-left: 25px;
+  }
+  .attraction__label:nth-of-type(4) {
+    order: 4;
   }
 }
