--- a/less/blocks/contact-inf.less
+++ b/less/blocks/contact-inf.less
@@ -1,6 +1,7 @@
 .contact-inf__wrap {
   .container();
-  max-width: 280px;
+  min-width: 280px;
+  max-width: 648px;
   padding-top: 18px;
   padding-bottom: 28px;
 }
@@ -73,13 +74,14 @@
 @media @tablet {
   .contact-inf__wrap {
     position: relative;
-    max-width: 100%;
     display: flex;
     flex-direction: column;
+    padding-bottom: 35px;
   }
   .contact-inf__title {
     padding-left: 60px;
     padding-right: 60px;
+    padding-bottom: 24px;
     font-size: 21px;
     align-self: center;
     background-color: #ffffff;
@@ -89,17 +91,54 @@
       z-index: -1;
       left: 0;
       right: 0;
-      top: 33px;
+      top: 30px;
       height: 1px;
       background-color: #dbdbdb;
     }
   }
   .contact-inf__label:first-of-type {
+    margin-bottom: 21px;
     &::before {
       left: auto;
       bottom: auto;
       top: 0;
       right: 0;
     }
+  }
+}
+@media @desktop {
+  .contact-inf__wrap {
+    max-width: 100%;
+  }
+  .contact-inf__title {
+    padding-bottom: 74px;
+  }
+  .contact-inf__label-wrap {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .contact-inf__label {
+    width: 480px;
+    flex-direction: row;
+    align-items: baseline;
+  }
+  .contact-inf__label:first-of-type {
+    width: 400px;
+    margin-bottom: 0;
+    &::before {
+      right: auto;
+      left: 106px;
+      top: -33px;
+    }
+  }
+  .contact-inf__label-text-hidden {
+    font-size: 0;
+  }
+  .contact-inf__label-text {
+    padding-right: 15px;
+    padding-left: 0;
+  }
+  .contact-inf__input {
+    flex-grow: 1;
   }
 }
