--- a/less/blocks/emotions.less
+++ b/less/blocks/emotions.less
@@ -41,9 +41,12 @@
   }
 }
 @media @tablet {
+  .emotions__wrap {
+    padding-bottom: 60px;
+  }
   .emotions__title {
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 75px;
+    padding-right: 75px;
     padding-bottom: 55px;
     font-size: 21px;
     align-self: center;
@@ -54,9 +57,17 @@
       z-index: -1;
       left: 0;
       right: 0;
-      top: 33px;
+      top: 30px;
       height: 1px;
       background-color: #dbdbdb;
     }
+  }
+}
+@media @desktop {
+  .emotions__wrap {
+    padding-bottom: 58px;
+  }
+  .emotions__title {
+    padding-bottom: 57px;
   }
 }
