--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -5,8 +5,8 @@
   .container();
 }
 .form__impression {
-  padding-top: 18px;
-  padding-bottom: 43px;
+  margin-top: 18px;
+  margin-bottom: 43px;
 }
 .form__btn {
   width: 280px;
@@ -26,7 +26,7 @@
 }
 @media @tablet {
   .form__wrap {
-    max-width: 940px;
+    max-width: 960px;
     padding-left: 60px;
     padding-right: 60px;
     flex-direction: row;
@@ -34,8 +34,19 @@
     justify-content: space-between;
   }
   .form__impression {
+    position: relative;
+    margin-bottom: 66px;
     order: -7;
     width: 50%;
+    &::before {
+      content: "";
+      position: absolute;
+      width: 1px;
+      background-color: #dbdbdb;
+      top: 0;
+      bottom: 0;
+      right: 0;
+    }
   }
   .form__person {
     order: -6;
@@ -54,11 +65,11 @@
     width: 100%;
   }
   .form__btn {
-    margin-bottom: 90px;
+    margin-bottom: 96px;
     width: 50%;
     max-width: 50%;
     &::before {
-      content: "* - обязательные поля";
+      content: "* – обязательные поля";
       position: absolute;
       right: 60px;
       font-size: 14px;
@@ -74,7 +85,7 @@
     padding-right: 120px;
   }
   .form__btn {
-    margin-bottom: 95px;
+    margin-bottom: 101px;
     &::before {
       right: 120px;
     }
