--- a/less/blocks/impression.less
+++ b/less/blocks/impression.less
@@ -65,18 +65,28 @@
   .imression__wrap {
     position: relative;
     margin-left: 0;
-    &::before {
-      content: "";
-      position: absolute;
-      width: 1px;
-      background-color: #dbdbdb;
-      top: 0;
-      bottom: 0;
-      right: 0;
-    }
+    margin-right: 0;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
   }
   .impression__title {
-    text-align: left;
+    align-self: flex-start;
+    margin-right: 16%;
     font-size: 21px;
+    padding-bottom: 73px;
+  }
+  .impression__label {
+    margin-bottom: 52px;
+    padding-left: 76px;
+  }
+}
+@media @desktop {
+  .imression__wrap {
+    padding-left: 5px;
+  }
+  .impression__title {
+    padding-left: 74px;
   }
 }
