module5 task finish

--- a/less/blocks/main-footer.less
+++ b/less/blocks/main-footer.less
@@ -56,8 +56,12 @@
 }
 @media @desktop {
   .main-footer__wrap {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
     padding-right: 44px;
     padding-left: 133px;
+    box-sizing: border-box;
   }
   .main-footer__socials {
     padding-right: 100px;
