--- a/less/style.less
+++ b/less/style.less
@@ -22,6 +22,8 @@
 @import "blocks/media.less";
 @import "blocks/person.less";
 @import "blocks/photo.less";
+@import "blocks/popup-falure.less";
+@import "blocks/popup-success.less";
 @import "blocks/promo-view.less";
 @import "blocks/socials.less";
 @import "blocks/video.less";
