--- a/less/blocks/attraction.less
+++ b/less/blocks/attraction.less
@@ -25,6 +25,7 @@
   padding-left: 80px;
   margin-bottom: 54px;
   box-sizing: border-box;
+  cursor: pointer;
   &::before {
     content: "";
     position: absolute;
