--- a/less/blocks/promo-view.less
+++ b/less/blocks/promo-view.less
@@ -10,6 +10,9 @@
   &--lower {
     height: 158px;
   }
+  @media @retina {
+    background-image: url("../img/bg-back-mobile@2x.jpg");
+  }
 }
 .promo-view__logo-title {
   margin: auto;
@@ -18,11 +21,15 @@
 
 @media @tablet {
   .promo-view__slogan-layout {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
     &--higher {
       height: 518px;
     }
     &--lower {
       height: 290px;
+    }
+    @media @retina {
+      background-image: url("../img/bg-back-tablet@2x.jpg");
     }
   }
   .promo-view__logo-title {
@@ -32,8 +39,12 @@
 }
 @media @desktop {
   .promo-view__slogan-layout {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
     &--lower {
       height: 301px;
+    }
+    @media @retina {
+      background-image: url("../img/bg-back-desktop@2x.jpg");
     }
   }
 }
