--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -41,6 +41,7 @@
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
+  cursor: pointer;
 }
 .video__remote-layout {
   bottom: 0;
