--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -24,6 +24,13 @@
 
   background-color: #81b3d2;
   cursor: pointer;
+  &:hover {
+    background-color: #669ec0;
+  }
+  &:active {
+    background-color: #5496bd;
+    color: rgba(255, 255, 255, 0.3);
+  }
 }
 @media @tablet {
   .form__wrap {
