--- a/less/blocks/socials.less
+++ b/less/blocks/socials.less
@@ -7,6 +7,12 @@
   width: 46px;
   height: 48px;
   background-color: #81b3d2;
+  &:hover {
+    background-color: #669ec0;
+  }
+  &:active {
+    background-color: #5496bd;
+  }
 }
 .socials__link:last-of-type {
   margin-right: 0;
