--- a/less/blocks/attraction.less
+++ b/less/blocks/attraction.less
@@ -37,6 +37,12 @@
     background-color: #f2f2f2;
     border-radius: 5px;
   }
+  &:hover::before {
+    background-color: #e5e5e5;
+  }
+  &:active::before {
+    background-color: #d5d5d5;
+  }
 }
 .attraction__input:checked + .attraction__label::after {
   content: "";
