--- a/less/blocks/emotions.less
+++ b/less/blocks/emotions.less
@@ -19,14 +19,27 @@
 .emotions__text {
   height: 160px;
   padding: 0;
-  border: none;
+  padding-top: 12px;
+  padding-left: 15px;
+  padding-right: 10px;
+  border: 4px solid #f2f2f2;
+
+  font-size: 16px;
+  font-weight: bold;
+
   background-color: #f2f2f2;
+  box-sizing: border-box;
   resize: none;
+  &:hover {
+    background-color: #e5e5e5;
+    border-color: #e5e5e5;
+  }
+  &:focus {
+    background-color: #ffffff;
+    border-color: #e5e5e5;
+  }
 }
 .emotions__text::placeholder {
-  padding-top: 16px;
-  padding-right: 10px;
-  padding-left: 19px;
   font-size: 16px;
   line-height: 26px;
   font-weight: bold;
