--- a/less/blocks/features-place.less
+++ b/less/blocks/features-place.less
@@ -39,13 +39,7 @@
 }
 .features-place__image-layout {
   height: 256px;
-  font-size: 0;
 
-  background-color: #ffffff;
-  background-image: url("../img/photo-city@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
 }
 .features-place__entertainment-item-title {
   margin: 0;
@@ -74,7 +68,14 @@
 
   }
   .features-place__image-layout {
-    height: 260px
+    display: flex;
+    justify-content: center;
+  }
+  .features-place__image-layout img {
+    display: block;
+    height: 256px;
+    width: 320px;
+
   }
   .features-place__entertainment {
     display: flex;
@@ -114,6 +115,10 @@
   }
   .features-place__image-layout {
     width: 67%;
+  }
+  .features-place__image-layout img {
+    width: 100%;
+    height: 256px;
   }
   .features-place__entertainment {
     height: 330px;
