--- a/less/blocks/location.less
+++ b/less/blocks/location.less
@@ -40,8 +40,14 @@
 
   background-color: #81b3d2;
   cursor: pointer;
+  &:hover {
+    background-color: #669ec0;
+  }
+  &:active {
+    background-color: #5496bd;
+    color: rgba(255, 255, 255, 0.3)
+  }
 }
-
 @media @tablet {
   .location__wrap {
     padding: 0;
