--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -47,10 +47,19 @@
 
     background-color: #81b3d2;
   }
-  .main-header__list li:first-of-type a {
+  .main-header__item-link:not(.main-header__item-link--active) {
+    &:hover {
+      background-color: #669ec0;
+    }
+    &:active {
+      background-color: #5496bd;
+      color: rgba(255, 255, 255, 0.3);
+    }
+  }
+  .main-header__item:first-of-type .main-header__item-link {
     border-top-color: transparent;
   }
-  .main-header__list li:last-of-type a {
+  .main-header__item:last-of-type .main-header__item-link {
     border-bottom: none;
     padding-bottom: 8px;
     box-shadow: inset 0 -7px 7px -7px rgba(27, 37, 44, 0.2);
@@ -125,7 +134,22 @@
   .main-header__item-link {
     font-size: 14px;
     padding: 0;
+    &:hover {
+      color: #81b3d2;
+    }
+    &:active {
+      color: rgba(0, 0, 0, 0.3);
+    }
+    &--active {
+      color: #766357;
+      &:hover {
+        color: #604e43;
+      }
+      &:active {
+        color: rgba(118, 99, 87, 0.3);
+    }
   }
+}
   .main-header__item:nth-of-type(2) {
     margin-right: auto;
   }
