--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -3,9 +3,22 @@
   margin-bottom: 36px;
 
   background-color: #ffffff;
-  background-image: url("../img/bg-map-mobile@1x.jpg");
+  background-image: url("../img/bg-map-tablet@1x.jpg");
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
+  @media @retina {
+    background-image: url("../img/bg-map-tablet@2x.jpg");
+  }
   .container();
+}
+@media @tablet {
+  .map__layout {
+      background-image: url("../img/bg-map-desktop@1x.jpg");
+    }
+  @media @retina {
+    .map__layout {
+      background-image: url("../img/bg-map-desktop@2x.jpg");
+    }
+  }
 }
