--- a/less/blocks/person.less
+++ b/less/blocks/person.less
@@ -32,10 +32,22 @@
   min-width: 0;
   margin-bottom: 20px;
   margin-left: 14px;
-  padding: 20px 0;
+  padding: 14px 0;
   padding-left: 22px;
-  border: none;
+  border: 4px solid #f2f2f2;
+
+  font-size: 18px;
+  font-weight: bold;
   background-color: #f2f2f2;
+  box-sizing: border-box;
+  &:hover {
+    background-color: #e5e5e5;
+    border-color: #e5e5e5;
+  }
+  &:focus {
+    background-color: #ffffff;
+    border-color: #e5e5e5;
+  }
 }
 .person__label:last-of-type .person__input {
   margin-bottom: 0;
