--- a/less/blocks/video.less
+++ b/less/blocks/video.less
@@ -32,7 +32,6 @@
 
   display: flex;
   flex-direction: column;
-  height: 201px;
   padding: 0 20px;
   margin-bottom: 140px;
 
@@ -40,8 +39,12 @@
   background-image: url(../img/video-mobile@1x.jpg);
   background-repeat: no-repeat;
   background-position: center top;
-  background-size: cover;
+  background-size: 100% 201px;
   cursor: pointer;
+  box-sizing: border-box;
+  @media @retina {
+    background-image: url(../img/video-mobile@2x.jpg);
+  }
 }
 .video__remote-layout {
   bottom: 0;
@@ -107,6 +110,12 @@
   background-image: url(../img/icon-video-fullscreen.svg);
 }
 @media @mobile {
+  .video__video-player {
+    width: 320px;
+    height: 201px;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .video__userbar-layout {
     position: relative;
     top: 100%;
@@ -131,11 +140,16 @@
     padding: 0;
   }
   .video__video-player {
-    height: 500px;
-    max-width: 800px;
+    height: 499px;
+    width: 648px;
     margin: 0 auto;
     margin-bottom: 76px;
     padding: 0;
+    background-image: url(../img/video-tablet@1x.jpg);
+    background-size: 100% 499px;
+    @media @retina {
+      background-image: url(../img/video-tablet@2x.jpg);
+    }
   }
   .video__remote-line {
     margin-left: 14%;
@@ -166,7 +180,12 @@
     padding-bottom: 28px;
   }
   .video__video-player {
-    margin-bottom: 121px
+    width: 800px;
+    margin-bottom: 121px;
+    background-image: url(../img/video-desktop@1x.jpg);
+    @media @retina {
+      background-image: url(../img/video-desktop@2x.jpg);
+    }
   }
   .video__remote-line {
     margin-left: 11.5%;
