--- a/less/blocks/main-header.less
+++ b/less/blocks/main-header.less
@@ -27,6 +27,8 @@
 }
 .main-header__logo {
   display: block;
+  width: 102px;
+  height: 83px;
 }
 .main-header__logo-wrap {
   position: absolute;
@@ -158,5 +160,14 @@
   }
   .main-header__logo-wrap {
     top: 0;
+  }
+}
+@media @desktop {
+  .main-header__logo-wrap {
+    margin-left: -94px;
+  }
+  .main-header__logo {
+    width: 188px;
+    height: 96px;
   }
 }
