--- a/less/blocks/socials.less
+++ b/less/blocks/socials.less
@@ -2,6 +2,7 @@
   display: flex;
 }
 .socials__link {
+  display: flex;
   margin-right: 6px;
   font-size: 0;
   width: 46px;
@@ -16,4 +17,11 @@
 }
 .socials__link:last-of-type {
   margin-right: 0;
+}
+.socials__link-icon {
+  margin: auto;
+  fill: #ffffff;
+}
+.socials__link:active .socials__link-icon {
+  fill: rgba(255, 255, 255, 0.3)
 }
