--- a/less/blocks/attraction.less
+++ b/less/blocks/attraction.less
@@ -49,10 +49,15 @@
   position: absolute;
   top: 6px;
   left: 17px;
-  width: 24px;
-  height: 16px;
-  background-image: url(../img/icon-tick.svg);
-  background-repeat: no-repeat;
+  width: 18px;
+  height: 11px;
+  border-left: 5px solid #333333;
+  border-bottom: 5px solid #333333;
+  box-sizing: border-box;
+  transform: rotate(-45deg);
+}
+.attraction__input:checked + .attraction__label:active::after {
+  border-color: rgba(51, 51, 51, 0.3);
 }
 .attraction__label:last-of-type {
   margin-bottom: 0;
