--- a/less/blocks/features-place.less
+++ b/less/blocks/features-place.less
@@ -21,6 +21,9 @@
 
   box-sizing: border-box;
 }
+.features-place__triangle {
+  display: none;
+}
 .features-place__title {
   margin: 0;
 
@@ -39,7 +42,27 @@
 }
 .features-place__image-layout {
   height: 256px;
-
+}
+.features-place__entertainment-item-layout {
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 39px;
+    height: 37px;
+    left: 0;
+    top: -10px;
+    background-size: 39px 37px;
+  }
+}
+.features-place__entertainment-item-layout:nth-of-type(1)::before {
+  background-image: url("../img/icon-house.svg");
+}
+.features-place__entertainment-item-layout:nth-of-type(2)::before {
+  background-image: url("../img/icon-gift.svg");
+}
+.features-place__entertainment-item-layout:nth-of-type(3)::before {
+  background-image: url("../img/icon-burger.svg");
 }
 .features-place__entertainment-item-title {
   margin: 0;
@@ -58,7 +81,16 @@
 }
 @media @mobile {
   .features-place__head-layout {
+    position: relative;
     width: 100%;
+  }
+  .features-place__triangle {
+    position: absolute;
+    top: -13px;
+    left: 0;
+    right: 0;
+    display: block;
+    fill: #ffffff;
   }
   .features-place__head {
     width: 280px;
@@ -131,6 +163,14 @@
     width: 33%;
     padding: 0 45px;
     padding-top: 160px;
+    &::before {
+      top: 63px;
+      left: 50%;
+      margin-left: -34px;
+      width: 77px;
+      height: 68px;
+      background-size: 77px 68px;
+    }
   }
   .features-place__entertainment-item-layout:nth-of-type(2) {
     order: 3;
