--- a/less/blocks/main-footer.less
+++ b/less/blocks/main-footer.less
@@ -32,6 +32,12 @@
 }
 .main-footer__copyright-img {
   display: block;
+  &:hover {
+    fill: #81b3d2;
+  }
+  &:active {
+    fill: rgba(0, 0, 0, 0.3);
+  }
 }
 @media @mobile {
   .main-footer__hash {
