--- a/less/blocks/map.less
+++ b/less/blocks/map.less
@@ -1,4 +1,5 @@
 .map__layout {
+  position: relative;
   height: 350px;
   margin-bottom: 36px;
 
@@ -11,6 +12,17 @@
     background-image: url("../img/bg-map-tablet@2x.jpg");
   }
   .container();
+  &::before {
+    content: "";
+    position: absolute;
+    width: 27px;
+    height: 27px;
+    top: 50%;
+    left: 50%;
+    margin-left: -14px;
+    margin-top: -14px;
+    background-image: url("../img/icon-map-marker.svg");
+  }
 }
 @media @tablet {
   .map__layout {
