--- a/less/blocks/promo-view.less
+++ b/less/blocks/promo-view.less
@@ -1,4 +1,5 @@
 .promo-view__slogan-layout {
+  position: relative;
   height: 389px;
   width: 100%;
   display: flex;
@@ -21,6 +22,15 @@
   margin: auto;
   padding-bottom: 21px;
 }
+.promo-view__triangle-mobile {
+  display: none;
+}
+.promo-view__triangle-tablet {
+  display: none;
+}
+.promo-view__triangle-desktop {
+  display: none;
+}
 @media @mobile {
   .promo-view__logo-title {
     width: 229px;
@@ -29,6 +39,12 @@
       width: 282px;
       height: 214px;
     }
+  }
+  .promo-view__triangle-mobile {
+    position: absolute;
+    display: block;
+    bottom: -1px;
+    fill: #ffffff;
   }
 }
 @media @tablet {
@@ -48,6 +64,14 @@
       height: 350px;
     }
   }
+  .promo-view__triangle-tablet {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    display: block;
+    fill: #ffffff;
+  }
   @media @retina {
     .promo-view__slogan-layout {
     background-image: url("../img/bg-back-desktop@2x.jpg");
@@ -60,5 +84,16 @@
       height: 301px;
       background-size: auto 518px;
     }
+  }
+  .promo-view__triangle-tablet {
+    display: none;
+  }
+  .promo-view__triangle-desktop {
+    position: absolute;
+    bottom: -1px;
+    left: -1px;
+    right: 0;
+    display: block;
+    fill: #ffffff;
   }
 }
